[tool.poetry]
name = "check-urls"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.1"
validators = "^0.20.0"
asyncclick = "^8.1.3.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.2.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
